"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2012-04-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-22:
	  hacprsim: clock-source command now reconfigures if channel
		already exists, and restarts the sourcing.
		Documented and tested.


2012-04-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-21:
	  Cleaned up several calls to global_entry_context::
		construct_global_footprint_frame(), to reduce
		exposing garbage temporary variables.


2012-04-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-20:
	  hacprsim: implemented 'meas-time' command prefix to 
		measure elapsed time of command.


2012-04-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-19:
	  hacknet: post-mangle instance name collision checking
		is accelerated slightly (10%) by caching the
		post-mangled name up-front.


2012-04-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-18:
	  hacprsim: implemented clock-source command that drives
		one node with a specified number of clock edges.


2012-04-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-17:
	  hacprsim: implemented channel-clocked for synchronous
		sources and expects.  Documented, test cases added.
	  prsim_advance(): was not properly handling fatal errors, 
		resulting in dropped error status.  fixed.


2012-04-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-16:
	  hacknet: added option to wrap long lines, auto_wrap_length.
		Set to > 0 to enable.  Documented, test cases added.


2012-04-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-15:
	  hacknet: struct_ports=0 now also suppresses local structs/channels,
		doesn't make sense to have locals without ports.
		Test case added.

