@@ -3,11 +3,11 @@ checkpoint version: 7
 seed48: 0 0 0
 Have 6 unique boolean nodes:
 	value	flags	cause	tcount
-1	0	0	(0,0), (0,0), (0,0)	0
-2	1	0	(0,0), (0,0), (0,0)	0
-3	X	0	(0,0), (0,0), (0,0)	0
-4	X	0	(0,0), (0,0), (0,0)	0
-5	X	0	(0,0), (0,0), (0,0)	0
+1	0	0x0	(0,0),(0,0),(0,0)	0
+2	1	0x0	(0,0),(0,0),(0,0)	0
+3	X	0x0	(0,0),(0,0),(0,0)	0
+4	X	0x0	(0,0),(0,0),(0,0)	0
+5	X	0x0	(0,0),(0,0),(0,0)	0
 Have 0 events in queue:
 	node	cause-node	cause-rule	value
 current time: 0
