@@ -1,0 +1,76 @@
+node[3]:
+value	flags	cause	tcount
+X	0x0	(0,0),(0,0),(0,0)	0
+node[3]:
+value	flags	cause	tcount
+X	0x8	(0,0),(0,0),(0,0)	0
+	50	a : 0
+	60	b : 1	[by a:=0]
+	70	c : 0	[by b:=1]
+	120	a : 1
+	130	b : 0	[by a:=1]
+	140	c : 1	[by b:=0]
+	170	a : 0	[by a:=0]
+	180	b : 1	[by a:=0]
+	190	c : 0	[by b:=1]
+	220	a : 1	[by a:=1]
+	230	b : 0	[by a:=1]
+	240	c : 1	[by b:=0]
+	270	a : 0	[by a:=0]
+	280	b : 1	[by a:=0]
+	290	c : 0	[by b:=1]
+	320	a : 1	[by a:=1]
+	330	b : 0	[by a:=1]
+	340	c : 1	[by b:=0]
+	370	a : 0	[by a:=0]
+	380	b : 1	[by a:=0]
+	390	c : 0	[by b:=1]
+	420	a : 1	[by a:=1]
+	430	b : 0	[by a:=1]
+	440	c : 1	[by b:=0]
+	470	a : 0	[by a:=0]
+	480	b : 1	[by a:=0]
+	490	c : 0	[by b:=1]
+	520	a : 1	[by a:=1]
+	530	b : 0	[by a:=1]
+	540	c : 1	[by b:=0]
+	570	a : 0	[by a:=0]
+	580	b : 1	[by a:=0]
+	590	c : 0	[by b:=1]
+	620	a : 1	[by a:=1]
+	630	b : 0	[by a:=1]
+	640	c : 1	[by b:=0]
+	670	a : 0	[by a:=0]
+	680	b : 1	[by a:=0]
+	690	c : 0	[by b:=1]
+	720	a : 1	[by a:=1]
+	730	b : 0	[by a:=1]
+	740	c : 1	[by b:=0]
+	770	a : 0	[by a:=0]
+	780	b : 1	[by a:=0]
+	790	c : 0	[by b:=1]
+	820	a : 1	[by a:=1]
+	830	b : 0	[by a:=1]
+	840	c : 1	[by b:=0]
+	870	a : 0	[by a:=0]
+	880	b : 1	[by a:=0]
+	890	c : 0	[by b:=1]
+	920	a : 1	[by a:=1]
+	930	b : 0	[by a:=1]
+	940	c : 1	[by b:=0]
+	970	a : 0	[by a:=0]
+	980	b : 1	[by a:=0]
+	990	c : 0	[by b:=1]
+	1020	a : 1	[by a:=1]
+	1030	b : 0	[by a:=1]
+	1040	c : 1	[by b:=0]
+	1070	a : 0	[by a:=0]
+	1080	b : 1	[by a:=0]
+	1090	c : 0	[by b:=1]
+node[3]:
+value	flags	cause	tcount
+0	0x8	(3,1),(3,0),(0,0)	15
+*** resetting 
+node[3]:
+value	flags	cause	tcount
+X	0x0	(0,0),(0,0),(0,0)	0
